<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/andesk"
    android:gravity="center_horizontal" >

    <ImageView
        android:id="@+id/metrica_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:background="#FFF"
        android:contentDescription="@string/metrica_name"
        android:padding="5dip"
        android:src="@drawable/logometrica" />

    <TextView
        android:id="@+id/metrica_text_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/metrica_title"
        android:layout_centerInParent="true"
        android:layout_margin="10dip"
        android:text="@string/metrica_text" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/metrica_eq"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35dip" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/metrica_text_label"
        android:layout_centerHorizontal="true" >

        <EditText
            android:id="@+id/txtOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned"
            android:width="80dip" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35dip" />

        <EditText
            android:id="@+id/txtTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned"
            android:width="80dip" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_weight="1"
            android:text="@string/metrica_eq"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35dip" />

        <TextView
            android:id="@+id/txtresult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_weight="1"
            android:text="@string/metrica_val"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="35dip" />
    </LinearLayout>

    <Button
        android:id="@+id/calc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dip"
        android:onClick="onClickCalcButton"
        android:text="@string/metrica_calcular" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/metrica_text_label"
        android:layout_below="@+id/calc_button"
        android:layout_margin="10dip"
        android:text="@string/metrica_text_chose" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignRight="@+id/linearLayout1"
        android:layout_below="@+id/TextView04"
        android:layout_marginTop="29dp" >

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dip"
            android:layout_weight="1"
            android:text="@string/metrica_label_chose" />

        <EditText
            android:id="@+id/txtError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.88"
            android:ems="10"
            android:inputType="numberSigned"
            android:width="180dip" />
    </LinearLayout>

    <Button
        android:id="@+id/crash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dip"
        android:onClick="onClickCrashButton"
        android:text="@string/metrica_button" />

</RelativeLayout>
